case out routes and add test pages.

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,4 +3,4 @@ extends layout
 block content
   img.logo(src='/images/logo.png')
   h1 We're doing some housekeeping
-  p We will be right back
+  p= body
